<resources>
    <string name="app_name">Hotel</string>
    <string name="Header_Text">Sadbhavna</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!--Food Data-->
    <string name="chineseCorner">Chinese Corner</string>
    <string name="PunjabiMasti">Punjabi Masti</string>
    <string name="GujaratiMasti">Gujarati</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_admob_app_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- strings.xml -->
    <string name="salary_format">Salary: %s</string>
    <string name="daily_wage_format">Daily Wage: %s</string>


    <!--  Title Text -->
    <string name="hotelTitle">Hotel</string>
    <string name="Quantity">Please Select The Quantity</string>

    <string-array name="categories_array">
        <item>All</item>
        <item>Chinese</item>
        <item>Punjabi</item>
        <item>Gujarati</item>
    </string-array>


    <!-- Logins-->
    <string name="login_to_account">Login To Your Account</string>
    <string name="login_subtext">Welcome, Please Enter Your Details</string>
    <string name="hint_text_username">Username</string>
    <string name="hint_text_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="or_login_with">Or Login With</string>
    <string name="new_user">Don\'t Have An Account? Register</string>
    <string name="already_user">Already Have An Account? Login</string>
    <string name="file_path">File Path</string>
    <string name="mobile_number">Enter Mobile No.</string>
    <string name="enter_email">Enter Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>

    <!--Drawer-->
    <string name="admin_login">Admin Login</string>
    <string name="admin_register">Admin Register</string>
    <string name="others_title">Others</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="communicate_title">Communicate</string>
    <string name="home">Home</string>

    <!--Admin view Added Data-->
    <string name="please_wait">Please Wait...</string>

    <!--Add New Food-->
    <string name="add_new_food">Add New Food</string>
    <string name="hint_text_food_name">Food Name</string>
    <string name="hint_text_food_desc">Food Description</string>
    <string name="hint_text_food_fullprice">Full Price</string>
    <string name="hint_text_food_halfprice">Half Price</string>



</resources>